Ultima Version antes de los pagos contiene lo de los analiticos del bruno y de pablo

--- a/app/src/main/res/layout/activity_payment_ok.xml
+++ b/app/src/main/res/layout/activity_payment_ok.xml
@@ -92,7 +92,7 @@
         android:layout_marginRight="15dp"
         android:layout_marginBottom="15dp"
         android:clickable="true"
-        android:onClick="finishPayment"
+        android:onClick="askDom"
         android:layout_height="45dp">
         <LinearLayout
             android:layout_width="wrap_content"
