--- a/app/src/main/res/layout/popupdom.xml
+++ b/app/src/main/res/layout/popupdom.xml
@@ -16,7 +16,7 @@
         <TextView
             android:layout_width="fill_parent"
             android:textColor="#000"
-            android:text="¡Ya eres paperless!"
+            android:text="Domiciliar tarjeta"
             android:gravity="center"
             android:layout_marginTop="10dp"
             android:textStyle="bold"
@@ -27,7 +27,7 @@
        <TextView
            android:layout_width="fill_parent"
            android:textColor="#000"
-           android:text="¡Ya eres paperless!"
+           android:text="¿Deseas activar el cargo automático de tus servicios a esta tarjeta?"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textSize="16dp"
@@ -38,23 +38,48 @@
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
-           android:clickable="true"
-           android:id="@+id/listo"
            android:layout_margin="15dp"
-
-           android:background="@drawable/brounded_corners"
+           android:orientation="horizontal"
            android:layout_weight=".5">
+           <LinearLayout
+               android:layout_width="0dp"
+               android:layout_weight=".5"
+               android:layout_marginRight="5dp"
+               android:layout_height="40dp"
+               android:clickable="true"
+               android:id="@+id/listo"
 
+               android:background="@drawable/brounded_corners">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textColor="#fff"
-               android:text="Listo"
+               android:text="De acuerdo"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:gravity="center"
                />
+           </LinearLayout>
+           <LinearLayout
+               android:layout_width="0dp"
+               android:layout_weight=".5"
+               android:layout_height="40dp"
+               android:clickable="true"
+               android:id="@+id/nop"
+                android:layout_marginLeft="5dp"
+               android:background="@drawable/brounded_corners">
+               <TextView
+                   android:layout_width="fill_parent"
+                   android:layout_height="fill_parent"
+                   android:textColor="#fff"
+                   android:text="En otra ocasión"
+                   android:textStyle="bold"
+                   android:textSize="15sp"
+                   android:layout_gravity="center"
+                   android:gravity="center"
+                   />
+           </LinearLayout>
            </LinearLayout>
        </LinearLayout>
 
