--- a/app/src/main/res/layout/activity_pagos_main.xml
+++ b/app/src/main/res/layout/activity_pagos_main.xml
@@ -130,6 +130,20 @@
             android:text="Estas son tus tarjetas registradas"
             android:textStyle="bold"
             android:textSize="15sp"/>
+        <ScrollView
+            android:layout_width="fill_parent"
+            android:layout_marginBottom="120dp"
+            android:layout_height="fill_parent">
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:id="@+id/contenedortjt"
+                android:orientation="vertical"
+
+                android:layout_height="wrap_content">
+
+                </LinearLayout>
+            </ScrollView>
+        
 
     </LinearLayout>
     <LinearLayout
@@ -181,8 +195,9 @@
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:text="Editar Tarjetas"
+            android:text="Agregar Tarjeta"
             android:textColor="#FFA807"
+
             android:layout_marginLeft="5dp"
             android:textSize="15sp"
             android:gravity="center"
