ultimo con tokens jalando

--- a/app/src/main/res/layout/activity_pagos_main.xml
+++ b/app/src/main/res/layout/activity_pagos_main.xml
@@ -203,7 +203,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:text="Agregar Tarjeta"
-            android:textColor="#FFA807"
+            android:textColor="#fff"
             android:layout_marginLeft="5dp"
             android:textSize="15sp"
             android:gravity="center"
