--- a/ICControls/src/main/res/layout/activity_consent.xml
+++ b/ICControls/src/main/res/layout/activity_consent.xml
@@ -19,6 +19,7 @@
     android:layout_height="wrap_content"
     android:layout_centerInParent="true"
     android:orientation="vertical">
+
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -37,6 +38,12 @@
         android:textColor="#000"
         android:textAlignment="center"
         android:text="@string/app_name"/>
+    <ImageView
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/icmesh"
+        android:layout_gravity="center_horizontal"/>
 </LinearLayout>
     <LinearLayout
         android:layout_width="fill_parent"
