--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -22,6 +22,7 @@
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
                 android:src="@drawable/logoizzi" />
+
             <TextView
                 android:id="@+id/h_title"
                 android:layout_width="wrap_content"
@@ -48,7 +49,24 @@
                 android:layout_centerVertical="true"
                 android:src="@drawable/menu" />
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="60dp"
+                android:clickable="true"
+                android:layout_alignParentRight="true"
+                android:onClick="swUsr"
+                android:id="@+id/swUsr"
+                android:gravity="right"
+                android:layout_height="fill_parent">
+                <ImageView
 
+                    android:layout_width="40dp"
+                    android:layout_height="fill_parent"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/switchuser" />
+            </LinearLayout>
         </RelativeLayout>
         <LinearLayout
             android:layout_width="fill_parent"
