--- a/ICControls/src/main/res/layout/activity_consent.xml
+++ b/ICControls/src/main/res/layout/activity_consent.xml
@@ -1,19 +1,31 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="0dp"
-    android:background="#fff"
+    android:background="#222"
     android:paddingRight="0dp"
     android:paddingTop="0dp"
     android:paddingBottom="0dp"
     tools:context="izzi.connect.controls.ConsentActivity">
     <ImageView
-        android:layout_width="130dp"
-        android:layout_height="50dp"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:layout_gravity="center_horizontal"
         android:layout_centerHorizontal="true"
         android:scaleType="centerInside"
+        android:id="@+id/imageView"
         android:src="@drawable/ic_logoizzi" />
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="80dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
+        android:scaleType="fitXY"
+        android:id="@+id/imageView2"
+        android:src="@drawable/lineaspash">
+
+    </ImageView>
 <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
@@ -23,27 +35,51 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textStyle="normal"
-        android:gravity="center"
-        android:textColor="#000"
-        android:textAlignment="center"
-        android:text="Desea compartir su información de perfil con:"/>
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:textStyle="bold"
         android:gravity="center"
         android:textSize="17dp"
-        android:textColor="#000"
+        android:textColor="#fff"
         android:textAlignment="center"
         android:text="@string/app_name"/>
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="normal"
+        android:gravity="center"
+        android:textColor="#fff"
+        android:textAlignment="center"
+        android:text="Autorización de envío de datos."/>
     <ImageView
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginTop="10dp"
         android:src="@drawable/icmesh"
         android:layout_gravity="center_horizontal"/>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"></LinearLayout>
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="normal"
+        android:gravity="center"
+        android:layout_marginTop="15dp"
+        android:textColor="#fff"
+        android:textAlignment="center"
+        android:id="@+id/infoprivacidad"
+        android:text="VEO recibirá la siguiente información:"/>
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:textColor="#777"
+        android:textAlignment="center"
+        android:text="Nombre completo y servicios contratados de izzi"/>
 </LinearLayout>
     <LinearLayout
         android:layout_width="fill_parent"
@@ -53,8 +89,8 @@
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="fill_parent"
-            android:background="#ccD60270"
-            android:onClick="permitir"
+            android:background="#222"
+            android:onClick="cancelar"
             android:clickable="true"
             android:layout_weight=".5">
             <TextView
@@ -62,25 +98,26 @@
                 android:layout_height="fill_parent"
                 android:textColor="#fff"
                 android:textAlignment="center"
-                android:textSize="15sp"
+                android:textSize="19sp"
+
                 android:gravity="center"
-                android:text="Si"/>
+                android:text="@string/ic_can"/>
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="fill_parent"
-            android:background="#cc00C1B5"
+            android:background="@drawable/goval"
             android:layout_weight=".5">
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:textColor="#fff"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:clickable="true"
-                android:onClick="cancelar"
+                android:onClick="permitir"
                 android:textAlignment="center"
                 android:gravity="center"
-                android:text="No"
+                android:text="Autorizar"
                 />
         </RelativeLayout>
     </LinearLayout>
