--- a/app/src/main/res/layout/pagos_list_item.xml
+++ b/app/src/main/res/layout/pagos_list_item.xml
@@ -1,30 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="fill_parent"
-    android:background="#55dfdfdf"
-    android:padding="1dp"
-    android:layout_height="70dp">
+    android:orientation="vertical" android:layout_width="fill_parent"
+    android:background="#fff"
+    android:layout_height="wrap_content">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:id="@+id/textMes"
+        android:visibility="gone"
+        android:gravity="center_vertical"
+        android:layout_alignParentLeft="true"
+        android:textColor="#000"
+        android:layout_marginLeft="10dp"
+        android:textSize="13sp"
+        android:text="Prueba"/>
+    <LinearLayout
+        android:orientation="horizontal" android:layout_width="fill_parent"
+        android:background="#dfdfdf"
+        android:padding="1dp"
+        android:layout_height="60dp">
     <RelativeLayout
         android:layout_width="fill_parent"
         android:background="#fff"
         android:orientation="horizontal"
         android:layout_height="fill_parent">
-
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:scaleType="fitStart"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="5dp"
+            android:id="@+id/imageIcon"
+            android:src="@drawable/pagol"
+            android:layout_alignParentLeft="true"
+            />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:id="@+id/fechaL"
+        android:id="@+id/formaL"
         android:gravity="center_vertical"
         android:layout_alignParentLeft="true"
         android:textColor="#000"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="5dp"
+        android:textSize="12sp"
         android:text="Prueba"/>
-
+    </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:id="@+id/montoL"
             android:textStyle="bold"
+            android:textSize="12sp"
             android:layout_centerHorizontal="true"
             android:gravity="center_vertical"
             android:layout_gravity="center_vertical"
@@ -34,7 +64,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:id="@+id/formaL"
+            android:id="@+id/fechaL"
+            android:textSize="12sp"
             android:gravity="center"
             android:layout_gravity="center_vertical"
             android:textColor="#000"
@@ -44,3 +75,4 @@
             android:text="Prueba"/>
     </RelativeLayout>
 </LinearLayout>
+    </LinearLayout>
