--- a/app/src/main/res/drawable/blackbox.xml
+++ b/app/src/main/res/drawable/blackbox.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
-</selector>
+    <!-- view background color -->
+    <solid
+        android:color="#000000" >
+    </solid>
+    <!-- Here is the corner radius -->
+    <corners
+        android:radius="10dp"   >
+    </corners>
+
+</shape>
