--- a/app/src/main/res/drawable/trjetacuadro.xml
+++ b/app/src/main/res/drawable/trjetacuadro.xml
@@ -5,11 +5,11 @@
 
     <!-- view background color -->
     <solid
-        android:color="#000000" >
+        android:color="#fff" >
     </solid>
     <!-- Here is the corner radius -->
-    <corners
-        android:radius="10dp"   >
-    </corners>
+    <stroke
+        android:width="1dp"
+        android:color="#dfdfdf"></stroke>
 
 </shape>
