--- a/app/src/main/res/layout/activity_pagos_main.xml
+++ b/app/src/main/res/layout/activity_pagos_main.xml
@@ -144,6 +144,7 @@
         <ScrollView
             android:layout_width="fill_parent"
             android:layout_marginBottom="120dp"
+            android:id="@+id/tjtsv"
             android:layout_height="fill_parent">
             <LinearLayout
                 android:layout_width="fill_parent"
