--- a/app/src/main/res/layout/card_list_item_pay.xml
+++ b/app/src/main/res/layout/card_list_item_pay.xml
@@ -2,13 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="fill_parent"
     android:background="#fff"
-    android:layout_height="70dp">
+    android:layout_height="140dp">
     <LinearLayout
         android:layout_width="fill_parent"
-        android:padding="1dp"
         android:background="#55dfdfdf"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
         android:layout_height="fill_parent">
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -17,8 +14,8 @@
         android:layout_height="fill_parent">
 
         <LinearLayout
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="27dp"
+            android:layout_height="27dp"
             android:orientation="vertical"
             android:id="@+id/radio"
             android:gravity="center_vertical"
@@ -36,11 +33,41 @@
                 android:orientation="vertical"
                 android:layout_margin="5dp"></LinearLayout>
             </LinearLayout>
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_marginLeft="70dp"
+        android:layout_marginLeft="85dp"
+        android:layout_marginRight="85dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:background="@drawable/cardbgrd"
         android:orientation="vertical"
         android:layout_height="fill_parent">
+        <ImageView
+            android:layout_width="25dp"
+            android:src="@drawable/chip"
+
+            android:layout_marginLeft="8dp"
+            android:layout_centerVertical="true"
+            android:layout_height="20dp" />
+        <ImageView
+            android:layout_width="30dp"
+            android:src="@drawable/tori1"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_height="45dp" />
+        <ImageView
+            android:layout_width="40dp"
+            android:src="@drawable/amex"
+            android:id="@+id/crdimg"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_height="40dp" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -50,31 +77,37 @@
             android:gravity="center_vertical"
             android:layout_gravity="center_vertical"
             android:textColor="#000"
+            android:layout_marginBottom="25dp"
+            android:textSize="13sp"
+            android:layout_alignParentBottom="true"
             android:text="MasterCard / Vigente"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tjtnumber"
-            android:layout_marginTop="3dp"
-            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="15dp"
+            android:layout_alignParentRight="true"
             android:gravity="center_vertical"
+            android:layout_centerVertical="true"
             android:textSize="13sp"
-            android:layout_gravity="center_vertical"
+            android:layout_centerInParent="true"
+
             android:textColor="#000"
-            android:text="●●●●●●●●●●●●5478"/>
-    </LinearLayout>
+            android:text="●●●● ●●●● ●●●● 5478"/>
+    </RelativeLayout>
 
         <LinearLayout
-            android:layout_width="25dp"
+            android:layout_width="30dp"
             android:layout_height="25dp"
             android:id="@+id/remove"
             android:gravity="center"
             android:layout_centerVertical="true"
             android:layout_gravity="center_vertical"
             android:orientation="horizontal"
-            android:background="@drawable/remove"
+            android:background="@drawable/remove2"
             android:clickable="true"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="20dp"
             android:layout_alignParentRight="true"
             >
         </LinearLayout>
