--- a/app/src/main/res/layout/slowinternet_error.xml
+++ b/app/src/main/res/layout/slowinternet_error.xml
@@ -5,15 +5,17 @@
     android:onClick="true"
     android:layout_width="match_parent" android:layout_height="match_parent">
 <RelativeLayout
-    android:layout_width="180dp"
-    android:layout_height="180dp"
+    android:layout_width="160dp"
+    android:layout_height="160dp"
     android:layout_centerInParent="true"
     android:background="@drawable/blackbox">
 <ImageView
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="80dp"
+    android:layout_height="80dp"
+    android:layout_marginTop="20dp"
+    android:layout_centerHorizontal="true"
     android:scaleType="fitCenter"
-    android:src="@drawable/astro"
+    android:src="@drawable/pollo"
     />
     <TextView
         android:layout_width="wrap_content"
@@ -21,7 +23,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_margin="5dp"
-        android:textSize="15sp"
+        android:textSize="12sp"
         android:id="@+id/error_desc"
         android:textColor="#fff"
         android:gravity="center"
