--- a/app/src/main/res/layout/activity_btf_landing.xml
+++ b/app/src/main/res/layout/activity_btf_landing.xml
@@ -42,7 +42,7 @@
                 android:textColor="#fff"
                 android:textSize="16sp"
                 android:clickable="true"
-                android:onClick="recupera"
+                android:onClick="registro"
                 android:textAlignment="center"
                 android:gravity="center"
                 android:text="Registrar"
