--- a/app/src/main/res/layout/activity_registro_main_activity.xml
+++ b/app/src/main/res/layout/activity_registro_main_activity.xml
@@ -1,12 +1,228 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
+    android:paddingTop="5dp"
+    android:background="#fff"
     tools:context="telecom.televisa.com.izzi.Registro_main_activity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ImageView
+        android:id="@+id/show_menu"
+        android:layout_width="50dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="10dp"
+        android:clickable="true"
+        android:onClick="closeView"
+        android:src="@drawable/regresar" />
 
+
+    <ImageView
+        android:layout_width="180dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="60dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
+        android:scaleType="centerInside"
+        android:id="@+id/imageView"
+        android:src="@drawable/logoizzi" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:textStyle="bold"
+        android:text="Crear cuenta"
+        android:textColor="#000"
+        android:id="@+id/textView"
+        android:textSize="17sp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="vertical"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:background="@drawable/loginback"
+        android:id="@+id/linearLayout">
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_marginTop="3dp"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            >
+            <ImageView
+                android:layout_width="30dp"
+                android:scaleType="fitXY"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_gravity="center_vertical"
+                android:layout_height="fill_parent"
+                android:layout_marginLeft="4dp"
+                android:src="@drawable/numerito"/>
+            <EditText
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:inputType="number"
+                android:ems="6"
+                android:maxLength="9"
+                android:layout_marginLeft="6dp"
+                android:layout_marginRight="4dp"
+                android:textSize="15sp"
+                android:hint="Número de cuenta"
+                android:background="#FFFFFF"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:id="@+id/contrato"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:background="#55555555"
+            android:layout_height="1dp"
+            />
+
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_marginTop="3dp"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            >
+            <ImageView
+                android:layout_width="30dp"
+                android:scaleType="fitCenter"
+                android:layout_gravity="center_vertical"
+                android:layout_height="fill_parent"
+                android:layout_marginLeft="4dp"
+                android:src="@drawable/user"/>
+            <EditText
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:inputType="textEmailAddress"
+                android:ems="6"
+                android:layout_marginLeft="6dp"
+                android:layout_marginRight="4dp"
+                android:textSize="15sp"
+                android:hint="(Correo@ejemplo.com)"
+                android:background="#FFFFFF"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:id="@+id/user"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:background="#55555555"
+            android:layout_height="1dp"
+            />
+        <LinearLayout
+            android:layout_width="fill_parent"
+
+            android:layout_marginBottom="3dp"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"
+            android:orientation="horizontal"
+            android:layout_height="40dp">
+            <ImageView
+                android:layout_width="25dp"
+                android:scaleType="fitCenter"
+                android:layout_marginLeft="4dp"
+                android:layout_gravity="center_vertical"
+                android:layout_height="fill_parent"
+                android:src="@drawable/password"/>
+            <EditText
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:inputType="textPassword"
+                android:ems="7"
+                android:textSize="14dp"
+                android:maxLength="22"
+                android:layout_marginRight="78dp"
+                android:layout_marginLeft="6dp"
+
+                android:hint="Contraseña"
+                android:background="#FFFFFF"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:id="@+id/password"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:textSize="12sp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:clickable="true"
+                android:id="@+id/mostrar"
+                android:visibility="gone"
+                android:layout_marginLeft="-75dp"
+                android:text="MOSTRAR"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:orientation="vertical"
+                android:layout_height="fill_parent">
+                <LinearLayout
+                    android:layout_width="8dp"
+                    android:layout_height="8dp"
+                    android:layout_marginTop="1dp"
+                    android:background="#00000555"
+                    android:id="@+id/str4"
+                    android:orientation="vertical"
+                    android:layout_marginBottom="1dp"></LinearLayout>
+                <LinearLayout
+                    android:layout_width="8dp"
+                    android:layout_height="8dp"
+                    android:layout_marginTop="1dp"
+                    android:background="#00000555"
+                    android:id="@+id/str3"
+                    android:orientation="vertical"
+                    android:layout_marginBottom="1dp"></LinearLayout>
+                <LinearLayout
+                    android:layout_width="8dp"
+                    android:layout_height="8dp"
+                    android:layout_marginTop="1dp"
+                    android:background="#00000555"
+                    android:id="@+id/str2"
+                    android:orientation="vertical"
+                    android:layout_marginBottom="1dp"></LinearLayout>
+                <LinearLayout
+                    android:layout_width="8dp"
+                    android:layout_height="8dp"
+                    android:layout_marginTop="1dp"
+                    android:orientation="vertical"
+                    android:background="#00000555"
+                    android:id="@+id/str1"
+                    android:layout_marginBottom="1dp"></LinearLayout>
+
+                </LinearLayout>
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="45dp"
+        android:text="Siguiente"
+        android:background="#D60270"
+        android:clickable="true"
+        android:onClick="register"
+
+        android:layout_gravity="center"
+        android:textSize="17sp"
+        android:textStyle="bold"
+        android:textColor="#fff"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"/>
 </RelativeLayout>
